; ModuleID = '/home/carl/AnghaBench/linux/net/mpls/extr_af_mpls.c_mpls_get_stats_af_size.c'
source_filename = "/home/carl/AnghaBench/linux/net/mpls/extr_af_mpls.c_mpls_get_stats_af_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.mpls_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.net_device*)* @mpls_get_stats_af_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mpls_get_stats_af_size(%struct.net_device* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.mpls_dev*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  %5 = load %struct.net_device*, %struct.net_device** %3, align 8
  %6 = call %struct.mpls_dev* @mpls_dev_get(%struct.net_device* %5)
  store %struct.mpls_dev* %6, %struct.mpls_dev** %4, align 8
  %7 = load %struct.mpls_dev*, %struct.mpls_dev** %4, align 8
  %8 = icmp ne %struct.mpls_dev* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i64 0, i64* %2, align 8
  br label %12

10:                                               ; preds = %1
  %11 = call i64 @nla_total_size_64bit(i32 4)
  store i64 %11, i64* %2, align 8
  br label %12

12:                                               ; preds = %10, %9
  %13 = load i64, i64* %2, align 8
  ret i64 %13
}

declare dso_local %struct.mpls_dev* @mpls_dev_get(%struct.net_device*) #1

declare dso_local i64 @nla_total_size_64bit(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
